# EmulationStation

./: .gitignore  .gitmodules  CMakeLists.txt  GRPCDEV.md  README.md  emulationstation-all.cbp
es-app/: emulationstation.cbp
es-app/src/: PlatformId.cpp  PlatformId.h  SystemData.cpp  SystemData.h  main.cpp
es-app/src/scrapers/: Scraper.cpp
es-app/src/views/: SystemView.cpp
es-app/src/views/gamelist/: BasicGameListView.cpp
es-core/: core.cbp
es-core/src/: Log.cpp  Settings.cpp  ThemeData.cpp
marketplace/: CMakeLists.txt  makefile
marketplace/src/: DownloadServer.cpp  DownloadServer.h  GameServer.cpp  GameServer.h  LoginServer.cpp  LoginServer.h  MarketplaceServers.cpp  MarketplaceServers.h  UserServer.cpp  UserServer.h
marketplaceServer/: CMakeLists.txt
tst/: CMakeLists.txt
tst/src/: TestDownloadServer.h  TestGameServer.h  TestLoginServer.h  TestUserServer.h  gTestMain.cpp  gtestmain.cpp
